# finmath

./: README.md  pyproject.toml
src/finmath/: main.py  nlp_analysis.py
