[project]
name = "finmath"
version = "0.1.0"
description = "A sample product to analyse financial data"
authors = [
    {name = "arvind-sharma-murugan", email = "arvind4nitkkr@gmail.com"},
]
dependencies = ["pandas>=2.2.3", "matplotlib>=3.10.3", "seaborn>=0.13.2", "sklearn>=0.0.post12", "scikit-learn>=1.6.1"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
